<resources>
    <string name="app_name">Lokido</string>
    <string name="action_settings">action_settings</string>
    <string name="action_favorite">action_favorite</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Lokido Sign in</string>
    <string name="navheader">You are logged in as :</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <string name="reset_password">RESET PASSWORD</string>
    <string name="signup">Don\'t have an account \? <font color="#76bef2">sign up</font></string>
    <string name="login">Already a member\? <font color='#76bef2'>Login</font></string>


    <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->

    <!--<string name="app_name">Firebase Auth</string>-->
    <!--<string name="action_sign_in_short">Register</string>-->
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="succeed">Logged in</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <!--<string name="title_activity_login">Sign in</string>-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register"> Get registered in LokiDo now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_changepin">Chanage Pin</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="btnLock">Locked</string>
    <string name="btnUnlock">Unlocked</string>
    <string name="btnAddLock">Add Lock</string>
    <string name="btnRemoveLock">Remove Lock</string>

    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>

    <!--pin-->
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">CANCEL</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.</string>
    <string name="popup">Do you want to remove pin bofore you logout ?</string>
</resources>
