<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lokido.isuru.lokido.Drawer"
    tools:showIn="@layout/app_bar_drawer">

    <!--AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-->

    <!--<android.support.design.widget.AppBarLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:theme="@style/AppTheme.AppBarOverlay"-->
    <!--app:elevation="0dp">-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connected Locks"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textLockName"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:text="Lock Name "
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLock"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textLockName"
            android:background="@color/colorPrimary"
            android:text="@string/btnLock"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLockID"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/btnLock"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="LockID" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textLockID"
            android:text="Add or Remove locks"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAddLock"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:background="@color/colorPrimary"
            android:text="@string/btnAddLock"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemoveLock"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView4"
            android:background="@color/colorPrimary"
            android:text="@string/btnRemoveLock"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>


    <!--AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-->
</android.support.constraint.ConstraintLayout>
