<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.lokido.isuru.lokido.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>



<!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->


<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.lokido.isuru.lokido.LoginActivity">-->

    <!--&lt;!&ndash; Login progress &ndash;&gt;-->
    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:visibility="gone" />-->
    <!--&lt;!&ndash;&ndash;&gt;-->
    <!--&lt;!&ndash;&ndash;&gt;-->
    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:fitsSystemWindows="true">-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="56dp"-->
            <!--android:paddingLeft="24dp"-->
            <!--android:paddingRight="24dp">-->

            <!--<ImageView android:src="@drawable/ic_fav"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="72dp"-->
                <!--android:layout_marginBottom="24dp"-->
                <!--android:layout_gravity="center_horizontal" />-->

            <!--&lt;!&ndash; Email Label &ndash;&gt;-->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->

                <!--<AutoCompleteTextView-->
                    <!--android:id="@+id/email"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_email"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--&lt;!&ndash; Password Label &ndash;&gt;-->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->
                <!--<EditText android:id="@+id/password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:imeActionId="6"-->
                    <!--android:imeActionLabel="@string/action_sign_in_short"-->
                    <!--android:imeOptions="actionUnspecified"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"-->
                    <!--android:hint="Password"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!--&lt;!&ndash;Login button&ndash;&gt;-->
            <!--<android.support.v7.widget.AppCompatButton-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="24dp"-->
                <!--android:layout_marginBottom="24dp"-->
                <!--android:padding="12dp"-->
                <!--android:text="Login"/>-->

            <!--&lt;!&ndash;reset password lable&ndash;&gt;-->
            <!--<TextView-->
                <!--android:id="@+id/reset_password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="33dp"-->
                <!--android:layout_weight="1"-->
                <!--android:clickable="true"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:onClick="reset_password"-->
                <!--android:text="@string/reset_password" />-->

            <!--&lt;!&ndash;sign up lable&ndash;&gt;-->
            <!--<TextView-->
                <!--android:id="@+id/signup"-->
                <!--android:layout_width="235dp"-->
                <!--android:layout_height="52dp"-->
                <!--android:layout_weight="1"-->
                <!--android:clickable="true"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:onClick="signup"-->
                <!--android:text="@string/signup" />-->


        <!--</LinearLayout>-->
    <!--</ScrollView>-->
    <!--&lt;!&ndash;&ndash;&gt;-->
    <!--&lt;!&ndash;&ndash;&gt;-->
    <!--&lt;!&ndash;<ScrollView&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/login_form"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="match_parent">&ndash;&gt;-->

        <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/email_login_form"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orientation="vertical">&ndash;&gt;-->

            <!--&lt;!&ndash;<android.support.design.widget.TextInputLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->

                <!--&lt;!&ndash;<AutoCompleteTextView&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/email"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:hint="@string/prompt_email"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:inputType="textEmailAddress"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:maxLines="1"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:singleLine="true" />&ndash;&gt;-->

            <!--&lt;!&ndash;</android.support.design.widget.TextInputLayout>&ndash;&gt;-->

            <!--&lt;!&ndash;<android.support.design.widget.TextInputLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->

                <!--&lt;!&ndash;<EditText&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/password"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:hint="@string/prompt_password"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:imeActionId="6"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:imeActionLabel="@string/action_sign_in_short"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:imeOptions="actionUnspecified"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:inputType="textPassword"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:maxLines="1"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:singleLine="true" />&ndash;&gt;-->

            <!--&lt;!&ndash;</android.support.design.widget.TextInputLayout>&ndash;&gt;-->

            <!--&lt;!&ndash;<Button&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/email_sign_in_button"&ndash;&gt;-->
                <!--&lt;!&ndash;style="?android:textAppearanceSmall"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginTop="16dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/action_sign_in_short"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textStyle="bold" />&ndash;&gt;-->

            <!--&lt;!&ndash;<android.support.design.widget.TextInputLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->

                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/reset_password"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:clickable="true"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:gravity="center_horizontal"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:onClick="reset_password"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:text="@string/reset_password" />&ndash;&gt;-->

            <!--&lt;!&ndash;</android.support.design.widget.TextInputLayout>&ndash;&gt;-->

            <!--&lt;!&ndash;<android.support.design.widget.TextInputLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->

                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/signup"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="235dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="52dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:gravity="center_horizontal"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:clickable="true"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:onClick="signup"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:text="@string/signup" />&ndash;&gt;-->

            <!--&lt;!&ndash;</android.support.design.widget.TextInputLayout>&ndash;&gt;-->


        <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->

    <!--&lt;!&ndash;</ScrollView>&ndash;&gt;-->
<!--</LinearLayout>-->
